   * Fix geni-remove-from-project script (#715)
   * Fix creation/deletion timestamps in monitoring (#817)
   * Fix up link selection when printing rspec (#818)
   * Alphabetize member lists for project and slice (#811)
   * Show one big "Login" box for exogeni consistent with instageni (#823)
   * Add instructions for naming on create slice page (#821)
   * Renew a slice for the end of the day (#796)
   * Support more integration with WiMAX: Use new URL (#771), allow
   users to change the project they use with WiMAX (#774), handle
   duplicate usernames (#776), support the agreed upon error codes
   (#777), allow deleting group members - like when they are removed
   from a project (#805), allow deleting groups (like when the project
   is expired or the project lead no longer endorses using WiMAX with
   the project (#806), allow project leads to enable multiple projects
   for WiMAX (#807), and suport changing the lead of a project
   (#808). For all these cases, the changes take effect when a project
   member - preferably the new project lead - loads the WiMAX
   page. Note that the WiMAX button remains limited visibility.
   * Make the 'Generate SSL cert' button open in a new tab (#822)

== 2.2 ==
  * Display fingerprints of SSH keys (#695)
  * Added version information to GENI portal (#789)
  * Comment out call to error log in MA causing PHP warning (#790)
  * Change some mail links to help@geni.net (#572)
  * Find owning aggregate using sliver_id for manifest (#712)
  * Project admins are made admins of newly created slices (#559)
  * Email experimenters when they request to be a project lead (#760)
  * Use code format for sample .irodsEnv file (#744)
  * Be more careful checking XML when printing RSpec (#791)
  * Put a refresh button the sliver status page (#451)
  * Show something for ExoGENI hostnames in details page (#767)
  * Remove 2 more uses of slice-member.php (#328)
  * Clean up temp files (#383)
  * Fix company name in copyright on footer (#793)